fixed nav issue on events page and properly aligned event boxes

--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,23 @@ body {
   max-width: 120rem;
   margin: -7rem auto 0 auto;
   background-color: #fff; }
-  .container--red {
-    background: linear-gradient(to right bottom, rgba(229, 57, 79, 0.6), rgba(240, 23, 55, 0.8));
-    height: 150rem; }
   @media only screen and (max-width: 37.5em) {
     .container {
       margin: 0 auto; } }
   @media only screen and (max-width: 56.25em) {
     .container {
       transform: translateX(0); } }
+
+.wrapper {
+  display: grid;
+  max-width: 120rem;
+  grid-template-rows: 1fr;
+  margin: -7rem auto 0 auto;
+  background-color: #fff;
+  background: linear-gradient(to right bottom, rgba(229, 57, 79, 0.6), rgba(240, 23, 55, 0.8)); }
+  @media only screen and (max-width: 37.5em) {
+    .wrapper {
+      margin: 0 auto; } }
 
 .add_margins {
   transform: translateX(70%);
@@ -109,6 +117,10 @@ a {
     @media only screen and (max-width: 37.5em) {
       .heading-two--left {
         font-size: 2.9rem; } }
+  .heading-two--center {
+    text-align: center;
+    color: #fff;
+    margin: 2rem; }
 
 .heading-three {
   font-size: 4rem;
