--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,6 +17,12 @@
       font-size: 2.9rem;
     }
   }
+
+  &--center {
+    text-align: center;
+    color: $color-white;
+    margin: 2rem;
+  }
   
 }
 
